--- a/EmailService/src/main/resources/com/microservice/systemConfig.properties
+++ b/EmailService/src/main/resources/com/microservice/systemConfig.properties
@@ -6,11 +6,11 @@ email.service.authentication.header.key.name=apiKey
 email.service.authentication.header.key.value=apiKey-rest-aLgUXVOadPzZ2-pTkaALoA
 
 email.service.email.senderName=Nabil Tawfik
-email.service.email.senderEmail=no-reply@nabilstawfik.me
+email.service.email.senderEmail=no-reply@nabilstawfik.com
 
-email.service.email.mailgun.apiKey=key-49c2be6d3a85086615d868540b8bb9da
-email.service.email.mailgun.url=https://api.mailgun.net/v3/nabilstawfik.me/messages
+email.service.email.mailgun.apiKey=key-{apiKey}
+email.service.email.mailgun.url=https://api.mailgun.net/v3/{accountName}/messages
 
-email.service.email.mandrill.apiKey=aLgUXVOadPzZ2-pTkaALoA
+email.service.email.mandrill.apiKey={apiKey}
 
 email.service.email.regex.validator=^([_a-zA-Z0-9-]+(\\.[_a-zA-Z0-9-]+)*@[a-zA-Z0-9-]+(\\.[a-zA-Z0-9-]+)*(\\.[a-zA-Z]{1,6}))?$
